--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
 Flask-Cors==4.0.1
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.7
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 outcome==1.3.0.post0
+packaging==24.2
 pycparser==2.22
 PySocks==1.7.1
 python-dotenv==1.0.1
