--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.8.2
 cachetools==5.4.0
 certifi==2024.7.4
 cffi==1.16.0
+charset-normalizer==3.4.1
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.3
@@ -19,6 +20,7 @@ packaging==24.2
 pycparser==2.22
 PySocks==1.7.1
 python-dotenv==1.0.1
+requests==2.32.3
 selenium==4.22.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -27,6 +29,7 @@ trio==0.26.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.2.2
+webdriver-manager==4.0.2
 websocket-client==1.8.0
 Werkzeug==3.0.3
 wsproto==1.2.0
