--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -25,39 +25,27 @@ stages:
         addToPath: true
       displayName: 'Use Python $(pythonVersion)'
 
-    # Install Chrome and set up environment for ChromeDriver
+    # Install Chrome for Selenium
     - script: |
-        # Install Chrome
         wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
         sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list'
         sudo apt-get update
         sudo apt-get install -y google-chrome-stable
-
-        # Print Chrome version for logging
         google-chrome --version
         
-        # Set up environment variables for webdriver-manager
         echo "##vso[task.setvariable variable=WDM_LOG_LEVEL]0"
         echo "##vso[task.setvariable variable=WDM_PROGRESS_BAR]0"
       displayName: 'Install Chrome'
-
-    # Install Python dependencies
-    - script: |
-        python -m pip install --upgrade pip
-        pip install gunicorn==21.2.0
-        pip install -r requirements.txt
-      displayName: 'Install Python dependencies'
 
     # Create startup script
     - task: Bash@3
       inputs:
         targetType: 'inline'
         script: |
-          cat > startup.sh << 'EOF'
+          cat > $(Build.ArtifactStagingDirectory)/startup.sh << 'EOF'
           #!/bin/bash
-          set -e  # Exit on any error
-
-          # Check if Chrome is installed
+          
+          # Install Chrome
           if ! command -v google-chrome &> /dev/null; then
               echo "Installing Chrome..."
               curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
@@ -66,18 +54,15 @@ stages:
               apt-get install -y google-chrome-stable
           fi
 
-          # Set environment name based on app service name
-          if [[ $WEBSITE_HOSTNAME == *"-test"* ]]; then
-              cp .env.test .env
-          else
-              cp .env.prod .env
-          fi
-
-          # Start the application with gunicorn
-          exec gunicorn --bind=0.0.0.0 --timeout 600 --workers 2 --threads 2 app:app
+          # Install Python dependencies
+          python -m pip install --upgrade pip
+          pip install --no-cache-dir -r requirements.txt
+          
+          # Start the application
+          gunicorn --bind=0.0.0.0 --timeout 600 --workers 2 --threads 2 app:app
           EOF
 
-          chmod +x startup.sh
+          chmod +x $(Build.ArtifactStagingDirectory)/startup.sh
       displayName: 'Create startup script'
 
     # Create test environment file
@@ -85,7 +70,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          cat > .env.test << EOF
+          cat > $(Build.ArtifactStagingDirectory)/.env.test << EOF
           TWITTER_USERNAME=$(TWITTER_USERNAME)
           TWITTER_PASSWORD=$(TWITTER_PASSWORD)
           TWITTER_PHONE_NUMBER=$(TWITTER_PHONE_NUMBER)
@@ -102,7 +87,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: |
-          cat > .env.prod << EOF
+          cat > $(Build.ArtifactStagingDirectory)/.env.prod << EOF
           TWITTER_USERNAME=$(TWITTER_USERNAME)
           TWITTER_PASSWORD=$(TWITTER_PASSWORD)
           TWITTER_PHONE_NUMBER=$(TWITTER_PHONE_NUMBER)
@@ -114,21 +99,33 @@ stages:
         TWITTER_PASSWORD: $(TWITTER_PASSWORD)
         TWITTER_PHONE_NUMBER: $(TWITTER_PHONE_NUMBER)
 
+    # Copy project files
+    - task: CopyFiles@2
+      inputs:
+        SourceFolder: '$(System.DefaultWorkingDirectory)'
+        Contents: |
+          **/*.py
+          requirements.txt
+          .env.example
+          models/**
+          services/**
+        TargetFolder: '$(Build.ArtifactStagingDirectory)'
+      displayName: 'Copy project files'
+
     # Archive files
     - task: ArchiveFiles@2
       inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+        rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
         includeRootFolder: false
         archiveType: 'zip'
         archiveFile: '$(Build.ArtifactStagingDirectory)/app.zip'
         replaceExistingArchive: true
-        verbose: true
       displayName: 'Archive project files'
 
     # Publish artifacts
     - task: PublishBuildArtifacts@1
       inputs:
-        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)/app.zip'
         ArtifactName: 'drop'
         publishLocation: 'Container'
       displayName: 'Publish artifacts'
@@ -146,22 +143,14 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: DownloadBuildArtifacts@1
-            inputs:
-              buildType: 'current'
-              downloadType: 'single'
-              artifactName: 'drop'
-              downloadPath: '$(System.ArtifactsDirectory)'
-
           - task: AzureWebApp@1
             inputs:
               azureSubscription: 'SocialMediaDetoxConnection'
               appName: 'smd-pythonapi-test'
-              package: '$(System.ArtifactsDirectory)/drop/app.zip'
+              package: '$(Pipeline.Workspace)/drop/app.zip'
               appType: 'webAppLinux'
               runtimeStack: 'PYTHON|3.12'
-              startUpCommand: 'bash startup.sh'
-              healthCheckPath: '/health'
+              startUpCommand: '/bin/bash startup.sh'
 
 - stage: DeployProd
   displayName: 'Deploy to Production'
@@ -176,19 +165,11 @@ stages:
       runOnce:
         deploy:
           steps:
-          - task: DownloadBuildArtifacts@1
-            inputs:
-              buildType: 'current'
-              downloadType: 'single'
-              artifactName: 'drop'
-              downloadPath: '$(System.ArtifactsDirectory)'
-
           - task: AzureWebApp@1
             inputs:
               azureSubscription: 'SocialMediaDetoxConnection'
               appName: 'smd-pythonapi-prod'
-              package: '$(System.ArtifactsDirectory)/drop/app.zip'
+              package: '$(Pipeline.Workspace)/drop/app.zip'
               appType: 'webAppLinux'
               runtimeStack: 'PYTHON|3.12'
-              startUpCommand: 'bash startup.sh'
-              healthCheckPath: '/health'
+              startUpCommand: '/bin/bash startup.sh'
