--- a/azure-pipeline.yml
+++ b/azure-pipeline.yml
@@ -119,6 +119,13 @@ stages:
               appType: 'webAppLinux'
               runtimeStack: 'PYTHON|3.12'
               startUpCommand: 'bash startup.sh'
+              
+          # Restart the web app after deployment
+          - task: AzureAppServiceManage@0
+            inputs:
+              azureSubscription: 'SocialMediaDetoxConnection'
+              Action: 'Restart Azure App Service'
+              WebAppName: 'smd-pythonapi-test'
 
 - stage: DeployProd
   displayName: 'Deploy to Production'
@@ -141,3 +148,10 @@ stages:
               appType: 'webAppLinux'
               runtimeStack: 'PYTHON|3.12'
               startUpCommand: 'bash startup.sh'
+
+          # Restart the web app after deployment
+          - task: AzureAppServiceManage@0
+            inputs:
+              azureSubscription: 'SocialMediaDetoxConnection'
+              Action: 'Restart Azure App Service'
+              WebAppName: 'smd-pythonapi-prod'
